--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/Sv443/Minecraft_Resource_Randomizer#readme",
   "dependencies": {
     "adm-zip": "^0.4.13",
+    "opn": "^6.0.0",
     "svjsl": "^1.7.0"
   }
 }
